🔧 Adicionar permissões necessárias para GitHub Actions

--- a/.github/workflows/update-clickup.yml
+++ b/.github/workflows/update-clickup.yml
@@ -12,6 +12,11 @@ on:
   push:
     branches: [ main ]
 
+# Adicionar permissões necessárias
+permissions:
+  contents: write
+  actions: read
+
 jobs:
   update-clickup-data:
     runs-on: ubuntu-latest
@@ -19,7 +24,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
